--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,11 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parkash Chander | Portfolio</title>
-  <link rel="stylesheet" href="parkash-portfolio
-/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <title>Parkash Chander Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body>
   <header class="hero">
@@ -52,4 +47,5 @@
 
 
 </html>
+
 
