--- a/index.html
+++ b/index.html
@@ -2,26 +2,38 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Parkash Chander - Tech Explorer, Learner, Creator">
-  <meta name="keywords" content="Parkash, Portfolio, Developer, Tech">
-  <meta name="author" content="Parkash Chander">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Parkash Chander - Tech Explorer, Learner, Creator" />
+  <meta name="keywords" content="Parkash, Portfolio, Developer, Tech" />
+  <meta name="author" content="Parkash Chander" />
   <title>Parkash Chander | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="profile.png">
+
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link rel="icon" href="profile.png" />
+
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
+
+  <!-- Sticky Navigation -->
+  <nav class="navbar">
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <!-- Hero Section -->
   <header class="hero">
-    <img src="profile.png" alt="Parkash Chander" class="profile-pic">
+    <img src="profile.png" alt="Parkash Chander" class="profile-pic" />
     <h1>Parkash Chander</h1>
     <p class="tagline">Tech Explorer | Learner | Creator</p>
+
     <div class="button-links">
       <a href="mailto:parkashchandereducation@gmail.com" class="btn">📧 Email Me</a>
       <a href="https://www.instagram.com/_p_a_r_k_a_s_h_/" target="_blank" class="btn">📷 Instagram</a>
@@ -30,35 +42,33 @@
     </div>
   </header>
 
+  <!-- About Section -->
   <section id="about" data-aos="fade-up">
     <div class="container">
       <h2>About Me</h2>
-      <p>I’m Parkash Chander, a 19-year-old tech enthusiast from Haridwar. I love exploring tech, learning new tools, and turning ideas into powerful websites and apps. From cybersecurity to content creation, I enjoy building stuff and sharing it with the world.</p>
+      <p>
+        I’m Parkash Chander, a 19-year-old tech enthusiast from Haridwar. I love
+        exploring tech, learning new tools, and turning ideas into powerful
+        websites and apps. From cybersecurity to content creation, I enjoy
+        building stuff and sharing it with the world.
+      </p>
     </div>
   </section>
 
-  <section id="projects" data-aos="fade-up">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="project-card">
-        <h3>Solar System Project</h3>
-        <iframe src="https://solarsystem.nasa.gov/" title="Solar System Project"></iframe>
-        <p>This project explores the structure and beauty of our solar system. Built using interactive tech & web design inspiration.</p>
-        <a href="https://solarsystem.nasa.gov/" target="_blank" class="btn">🔗 View Project</a>
-      </div>
-      <div class="project-card">
-        <h3>More Projects Coming Soon...</h3>
-      </div>
-    </div>
-  </section>
-
+  <!-- Skills Section -->
   <section id="skills" data-aos="fade-up">
     <div class="container">
       <h2>Skills</h2>
-      <p>💻 HTML, CSS, C, C++, JavaScript<br>🧠 Cybersecurity Basics<br>📹 Content Creation<br>🎨 Web Designing & UI</p>
+      <p>
+        💻 HTML, CSS, C, C++, JavaScript<br />
+        🧠 Cybersecurity Basics<br />
+        📹 Content Creation<br />
+        🎨 Web Designing & UI
+      </p>
     </div>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" data-aos="fade-up">
     <div class="container">
       <h2>Contact Me</h2>
@@ -69,6 +79,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     &copy; 2025 Parkash Chander. All rights reserved.
   </footer>
